[workspace]
members = ["programs/*"]
resolver = "2"

# Anchor / Solana BPF release profile. `overflow-checks` stays ON in release:
# arithmetic overflow on a token program must abort the transaction, never wrap.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
