[project]
name = "echelon-rewards"
version = "0.1.0"
description = "Reward-share + emission simulator for the Echelon meshnet token economy"
authors = [{ name = "Echelon Foundation" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["."]
include = ["echelon_rewards*"]
